tests/conformance/accept/identity.ts
function id(x: number): number {
  return x;
}

const main = (): number => id(42);
console.log(main());
